workloads/quarkus-rollouts-demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argo-rollouts-quarkus-demo
  labels: 
    sidecar.istio.io/inject: "true"
spec: {}
