workloads/quarkus-rollouts-demo/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts-quarkus-demo-canary
  namespace: argo-rollouts-quarkus-demo
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: argo-rollouts-quarkus-demo
    role: canary
