workloads/quarkus-rollouts-demo/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts-quarkus-demo-stable
  namespace: argo-rollouts-quarkus-demo
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: argo-rollouts-quarkus-demo
    role: stable
