workloads/quarkus-rollouts-demo/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: argo-rollouts-quarkus-demo
  namespace: argo-rollouts-quarkus-demo
spec:
  to:
    kind: Service
    name: argo-rollouts-quarkus-demo-stable
    weight: 100
  alternateBackends:
  - kind: Service
    name: argo-rollouts-quarkus-demo-canary
    weight: 0
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect

# Made with Bob
